# py-ads-client

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/: release.yml  requirements.txt
.github/ISSUE_TEMPLATE/: 01-bug-report.md
.github/workflows/: check-pr-label.yaml  pypi-publish.yaml  test.yaml
docs/: conf.py  index.rst  installation.rst  requirements.txt
docs/usage/: access_1d_array_example.py  access_2d_array_example.py  access_array_variable.rst  access_primitive_variable.rst  access_primitive_variable_example.py  access_string_variable.rst  access_string_variable_example.py  access_struct_array_example.py  access_struct_variable.rst  access_struct_variable_example.py  access_time_variable.rst  access_time_variable_example.py  device_notification.rst  device_notification_example.py  index.rst  method-call.py  method_call.rst  read_device_info.rst  read_device_info_example.py  read_state.rst  read_state_example.py  write_control.rst  write_control_example.py
src/py_ads_client/: __init__.py  ads_client.py  ads_symbol.py  types.py
src/py_ads_client/ams/: ads_add_device_notification.py  ads_delete_device_notification.py  ads_device_notification.py  ads_read.py  ads_read_device_info.py  ads_read_state.py  ads_read_write.py  ads_write.py  ads_write_control.py  ams_header.py
src/py_ads_client/ams/tests/: test_ads_add_device_notification.py  test_ads_delete_device_notification.py  test_ads_device_notification.py  test_ads_read.py  test_ads_read_device_info.py  test_ads_read_state.py  test_ads_read_write.py  test_ads_write.py  test_ads_write_control.py  test_ams_header.py
src/py_ads_client/constants/: ads_state.py  command_id.py  encoding.py  index_group.py  return_code.py  state_flag.py  transmission_mode.py
src/py_ads_client/helpers/: decode_ams_payload.py  encode_ams_payload.py
src/py_ads_client/helpers/tests/: test_complex_payload.py  test_simple_array_payload.py  test_time_date_payload.py
src/py_ads_client/tests/: test_ads_client.py  test_ads_symbol.py  test_types.py
